--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 		<title>HTML5 New Features</title>
 	</head>
 	<body>
-		
-		<h1>HTML5 New Features</h1>
+		<header>
+			<h1>HTML5 New Features</h1>
+			<nav>
+      	<li><a href="home.html">Home</a></li>
+        <li><a href="updated-tags.html">Updated Tags</a></li>
+    		<li><a href="updated-elements.html">Updated Elements</a></li>
+    		<li><a href="new-elements.html">New Elements</a></li>
+    		<li><a href="new-input-types.html">New Input Types</a></li>
+    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
+    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+			</nav>
+		</header>
+	
 		
 		<h2>Updated Tags</h2>
 		
@@ -116,7 +127,11 @@
 			for grouping together thematically related content. You might want to 
 			replace some of your "div" elements with "section" elements, but remember 
 			to always ask yourself, "Is all of the content related?" If yes, a 
-			"section" element is an appropriate choice.
+			"section" element is an appropriate choice. Examples of sections would be 
+			chapters, numbered sections of a thesis. A "section" element is similar to 
+			an "article" element with the main difference being that the content 
+			within a "section" element doesn't necessarily need to make sense out of 
+			the context of the page.
 		</p>
 		<h4>Example</h4>
 		<h5>HTML (Prior to HTML5)</h5>
@@ -143,10 +158,11 @@
 		<h3>Header</h3>
 		<h4>Description</h4> 
 		<p>
-			A "header" represents a group of introductory content (name of the page, 
-			tagline) and/or navigational aids (clickable logo). You can include more 
-			than one header on your page. The "header" usually appears at the top of a
-			document or section.
+			A "header" represents a group of introductory content to a web page. This 
+			will usually contain a heading, metadata(i.e. post date) and/or 
+			navigational aids(i.e. clickable logo, table of content within a "nav" 
+			element). You can include more than one "header" element on your page but 
+			it usually appears at the top of a document or section.
 		</p>
 		<h4>Example:</h4>
 		<h5>HTML (Prior to HTML5)</h5>
@@ -193,6 +209,24 @@
 			The HTML5 implementation makes the document more <strong>semantic</strong>.
 		<p>
 
+		<h3>Address</h3>
+		<h4>Description</h4>
+		<p>
+			The "address" element represents the contact information(i.e. author's 
+			website or email address) for an article or web page and is not intended 
+			for marking up postal addresses. The "address" element is often used 
+			within the "footer".
+		</p>
+		<h5>HTML5</h5>
+		<p>
+			&ltfooter&gt<br>
+			&nbsp&nbsp&ltaddress&gt<br>
+			&nbsp&nbsp&nbsp&nbspBy &lta href="mailto:marios.sofokleous@yandex.com"&gtMarios Sofokleous&lt/a&gt<br>
+			&nbsp&nbsp&lt/address&gt<br>
+			&nbsp&nbsp&ltp&gtCopyright Marios Sofokleous 2017&ltp&gt<br>
+			&lt\footer&gt<br>
+		</p>
+
 		<h3>Aside</h3>
 		<h4>Description</h4>
 		<p>
@@ -201,7 +235,8 @@
 			of an article or page (secondary information). When used within an 
 			"article" element, its contents should be related to that particular 
 			"article". When used outside an "article" element, the "aside" contents 
-			should be specifically related to the site. 
+			should be specifically related to the site. "aside"elements can be used 
+			for sidebars, pull quotes or figures.
 		</p>
 		<h4>Example</h4>
 		<p>
@@ -229,7 +264,8 @@
 		<h4>Description</h4>
 		<p>
 			A "nav" represents a section of a page that links to other pages or to 
-			parts within the page. This element is intended for "major navigation".
+			parts within the page. This element is intended for "major navigation". A
+			"nav" element is ideal for menus and table of contents.
 		</p>
 		<h4>Example</h4>
 		<p>
@@ -260,6 +296,11 @@
 			An "article" represents a complete or self-contained part of a document 
 			that is independently reusable or distributable. The "article" element is 
 			another type of "section" used for self-contained related content. 
+			Examples of articles would be forums posts, magazine/newspaper articles, 
+			blog entries, user submitted comments or any other independent item of 
+			content. You can nest "article" elements within one another. In this case
+			it's implied that the nested elements are related to the outer "article" 
+			element.
 		</p>
 		<h4>Examples</h4>
 		<p>Blog post, news story, comment on a post, a review.</p>
@@ -283,9 +324,10 @@
 		<h4>Description</h4>
 		<p>
 			"main" represents the main content of the body of a document or 
-			application. Do not include more than one "main" element in a document. Do
+			application. Do not include more than one "main" element on the site. Do
 			not include the "main" element inside of an "article", "aside", "footer", 
-			"header" or "nav" element.
+			"header" or "nav" element. Any content that is repeated on multiple pages
+			should not be placed within the "main" element. 
 		</p>
 		<h4>Example</h4>
 		<h5>HTML (Prior to HTML5)</h5>
@@ -791,8 +833,10 @@
   		Password: <input type="password" name="userpsw" required>
   		<input type="submit">
 		</form>
-		<p>...</p>
-		<p>...</p>
-		<p>...</p>
+		<footer>
+
+
+
+		</footer>
 	</body>
 </html>
