Add div elements to style code sections

--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -37,19 +37,21 @@
 				</p> 
 				<h4>Example:</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspChoose an OS:<br>
-					&nbsp&nbsp&ltinput list="operating systems"&gt<br>
-					&nbsp&nbsp&ltdatalist id="operating systems"&gt<br>
-					&nbsp&nbsp&nbsp&nbsp&ltoption value="Windows"&gt<br>
-					&nbsp&nbsp&nbsp&nbsp&ltoption value="macOS"&gt<br>
-					&nbsp&nbsp&nbsp&nbsp&ltoption value="Linux"&gt<br>
-					&nbsp&nbsp&nbsp&nbsp&ltoption value="Solaris"&gt<br>
-					&nbsp&nbsp&nbsp&nbsp&ltoption value="FreeBSD"&gt<br>
-					&nbsp&nbsp&lt/datalist&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspChoose an OS:<br>
+						&nbsp&nbsp&ltinput list="operating systems"&gt<br>
+						&nbsp&nbsp&ltdatalist id="operating systems"&gt<br>
+						&nbsp&nbsp&nbsp&nbsp&ltoption value="Windows"&gt<br>
+						&nbsp&nbsp&nbsp&nbsp&ltoption value="macOS"&gt<br>
+						&nbsp&nbsp&nbsp&nbsp&ltoption value="Linux"&gt<br>
+						&nbsp&nbsp&nbsp&nbsp&ltoption value="Solaris"&gt<br>
+						&nbsp&nbsp&nbsp&nbsp&ltoption value="FreeBSD"&gt<br>
+						&nbsp&nbsp&lt/datalist&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<p>
 					<i class="notice">Notice:</i> The "list" and "id" attributes need to 
 					be the same. The &ltinput&gt element needs to know about the 
