--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -65,11 +65,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltinput type="text" name="first-name" placeholder="First name"&gt<br>
-					&ltinput type="text" name="last-name" placeholder="Last name"&gt<br>
-					&ltinput type="text" name="email" placeholder="email"&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltinput type="text" name="first-name" 
+						placeholder="First name"&gt<br>
+						&ltinput type="text" name="last-name" placeholder="Last name"&gt<br>
+						&ltinput type="text" name="email" placeholder="email"&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					<input type="text" name="first-name" placeholder="First name">
@@ -86,13 +89,15 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspUsername:&ltinput type="text" name="username" 
-					autofocus&gt<br>
-					&nbsp&nbspPassword:&ltinput type="password" name=:"psw"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspUsername:&ltinput type="text" name="username" 
+						autofocus&gt<br>
+						&nbsp&nbspPassword:&ltinput type="password" name=:"psw"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Username:<input type="text" name="username" autofocus>
@@ -110,16 +115,18 @@
 				</p>
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-		  		&nbsp&nbspUsername: &ltinput type="text" name="username" 
-		  		required&gt<br>
-		  		&nbsp&nbsp&ltinput type="submit"&gt<br>
-		  		&nbsp&nbspPassword: &ltinput type="password" name="userpsw" 
-		  		required&gt<br>
-		  		&nbsp&nbsp&ltinput type="submit"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+			  		&nbsp&nbspUsername: &ltinput type="text" name="username" 
+			  		required&gt<br>
+			  		&nbsp&nbsp&ltinput type="submit"&gt<br>
+			  		&nbsp&nbspPassword: &ltinput type="password" name="userpsw" 
+			  		required&gt<br>
+			  		&nbsp&nbsp&ltinput type="submit"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 		  		Username: <input type="text" name="username" required>
