--- a/new-input-types.html
+++ b/new-input-types.html
@@ -46,12 +46,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspSearch Google:<br>
-					&nbsp&nbsp&ltinput type="search" name="google-search"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspSearch Google:<br>
+						&nbsp&nbsp&ltinput type="search" name="google-search"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Search Google:
@@ -67,12 +69,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspE-mail:<br>
-					&nbsp&nbsp&ltinput type="email" name="email"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspE-mail:<br>
+						&nbsp&nbsp&ltinput type="email" name="email"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>		
 				<form>
 					E-mail:
@@ -88,12 +92,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspAdd your homepage:<br>
-					&nbsp&nbsp&ltinput type="url" name="homepage"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspAdd your homepage:<br>
+						&nbsp&nbsp&ltinput type="url" name="homepage"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Add your homepage:
@@ -109,12 +115,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspTelephone:<br>
-					&nbsp&nbsp&ltinput type="tel" name="usrtel"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspTelephone:<br>
+						&nbsp&nbsp&ltinput type="tel" name="usrtel"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Telephone:
@@ -133,12 +141,15 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspEnter a number (between 1 and 5):<br>
-					&nbsp&nbsp&ltinput type="number" name="number" min="1" max="5"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspEnter a number (between 1 and 5):<br>
+						&nbsp&nbsp&ltinput type="number" name="number" min="1" 
+						max="5"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Enter a number (between 1 and 5):
@@ -156,12 +167,15 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbsp&ltp&gtRange (0-50):&lt/p&gt<br>
-					&nbsp&nbsp&ltinput type="range" name="points" min="0" max="50"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbsp&ltp&gtRange (0-50):&lt/p&gt<br>
+						&nbsp&nbsp&ltinput type="range" name="points" min="0" 
+						max="50"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Range (0-50):
@@ -177,12 +191,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspSelect a month:<br>
-					&nbsp&nbsp&ltinput type="month" name="month-year"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspSelect a month:<br>
+						&nbsp&nbsp&ltinput type="month" name="month-year"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Select a month:
@@ -198,12 +214,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspSelect a week:<br>
-					&nbsp&nbsp&ltinput type="week" name="week-year"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspSelect a week:<br>
+						&nbsp&nbsp&ltinput type="week" name="week-year"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Select a week:
@@ -219,12 +237,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspBirthday:<br>
-					&nbsp&nbsp&ltinput type="date" name="birthday"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspBirthday:<br>
+						&nbsp&nbsp&ltinput type="date" name="birthday"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Birthday:
@@ -241,12 +261,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspExam (date and time):<br>
-					&nbsp&nbsp&ltinput type="datetime-local" name="exam-time"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspExam (date and time):<br>
+						&nbsp&nbsp&ltinput type="datetime-local" name="exam-time"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Exam (date and time):
@@ -262,12 +284,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspExam (date and time):<br>
-					&nbsp&nbsp&ltinput type="datetime" name="exam-time"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspExam (date and time):<br>
+						&nbsp&nbsp&ltinput type="datetime" name="exam-time"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Exam (date and time):
@@ -287,12 +311,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspSelect a time:<br>
-					&nbsp&nbsp&ltinput type="time" name="usrtime"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspSelect a time:<br>
+						&nbsp&nbsp&ltinput type="time" name="usrtime"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Select a time:
@@ -308,12 +334,14 @@
 				</p> 
 				<h4>Example</h4>
 				<h5>HTML5</h5>
-				<p>
-					&ltform&gt<br>
-					&nbsp&nbspPick a color:<br>
-					&nbsp&nbsp&ltinput type="color" name="usrcolor"&gt<br>
-					&lt/form&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltform&gt<br>
+						&nbsp&nbspPick a color:<br>
+						&nbsp&nbsp&ltinput type="color" name="usrcolor"&gt<br>
+						&lt/form&gt<br>
+					</p>
+				</div>
 				<h5>Result</h5>
 				<form>
 					Pick a color:
