--- a/updated-elements.html
+++ b/updated-elements.html
@@ -29,19 +29,23 @@
 			</header>
 			<section>
 				<h3>Example:</h3>
-				<p>
-					&lt!DOCTYPE html&gt (1)<br>
-					&lthtml&gt<br>
-					&nbsp&nbsp&lthead&gt<br>
-					&nbsp&nbsp&nbsp&nbsp&ltmeta charset="UTF-8"&gt (2)<br>
-					&nbsp&nbsp&nbsp&nbsp&ltlink rel="stylesheet" href="foo.css"&gt (3)<br>
-					&nbsp&nbsp&nbsp&nbsp&ltscript src="foo.js"&gt&lt/script&gt (4.1)<br>
-					&nbsp&nbsp&nbsp&nbsp&ltscript&gt<i>JS code</i>&lt/script&gt (4.2)<br>
-					&nbsp&nbsp&nbsp&nbsp...<br>
-					&nbsp&nbsp&lt/head&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/html&gt
-				</p>
+				<div class="code">
+					<p>
+						&lt!DOCTYPE html&gt (1)<br>
+						&lthtml&gt<br>
+						&nbsp&nbsp&lthead&gt<br>
+						&nbsp&nbsp&nbsp&nbsp&ltmeta charset="UTF-8"&gt (2)<br>
+						&nbsp&nbsp&nbsp&nbsp&ltlink rel="stylesheet" href="foo.css"&gt 
+						(3)<br>
+						&nbsp&nbsp&nbsp&nbsp&ltscript src="foo.js"&gt&lt/script&gt (4.1)<br>
+						&nbsp&nbsp&nbsp&nbsp&ltscript&gt<i>JS code</i>&lt/script&gt 
+						(4.2)<br>
+						&nbsp&nbsp&nbsp&nbsp...<br>
+						&nbsp&nbsp&lt/head&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/html&gt
+					</p>
+				</div>
 				<h3>Description:</h3>
 				<ul>
 					<li>
