--- a/new-elements.html
+++ b/new-elements.html
@@ -44,21 +44,25 @@
 				</p>
 				<h4>Example</h4>
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltdiv class="section"&gt<br>
-					&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
-					&nbsp&nbsp&ltp&gtThis is the Art Gallery blog.&ltp&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/div&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltdiv class="section"&gt<br>
+						&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
+						&nbsp&nbsp&ltp&gtThis is the Art Gallery blog.&ltp&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/div&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>
-					&ltsection&gt<br>
-					&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
-					&nbsp&nbsp&ltp&gtThis is the Art Gallery blog.&ltp&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/section&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltsection&gt<br>
+						&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
+						&nbsp&nbsp&ltp&gtThis is the Art Gallery blog.&ltp&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/section&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -76,21 +80,25 @@
 				</p>
 				<h4>Example:</h4>
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltdiv class="header"&gt<br>
-					&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
-					&nbsp&nbsp&ltp&gtCovering all the Art Galleries across the globe
-					&lt/p&gt<br>
-					&lt/div&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltdiv class="header"&gt<br>
+						&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
+						&nbsp&nbsp&ltp&gtCovering all the Art Galleries across the globe
+						&lt/p&gt<br>
+						&lt/div&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>
-					&ltheader&gt<br>
-					&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
-					&nbsp&nbsp&ltp&gtCovering all the Art Galleries across the globe
-					&lt/p&gt<br>
-					&lt/header&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltheader&gt<br>
+						&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
+						&nbsp&nbsp&ltp&gtCovering all the Art Galleries across the globe
+						&lt/p&gt<br>
+						&lt/header&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -108,17 +116,21 @@
 				</p>
 				<h4>Example</h4>
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltdiv class="footer"&gt<br>
-					&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
-					&lt/div&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltdiv class="footer"&gt<br>
+						&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
+						&lt/div&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>
-					&ltfooter&gt<br>
-					&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
-					&lt/footer&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltfooter&gt<br>
+						&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
+						&lt/footer&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -134,15 +146,18 @@
 					often used within the "footer".
 				</p>
 				<h5>HTML5</h5>
-				<p>
-					&ltfooter&gt<br>
-					&nbsp&nbsp&ltaddress&gt<br>
-					&nbsp&nbsp&nbsp&nbspBy &lta href="mailto:marios.sofokleous@yandex.com"
-					&gtMarios Sofokleous&lt/a&gt<br>
-					&nbsp&nbsp&lt/address&gt<br>
-					&nbsp&nbsp&ltp&gtCopyright Marios Sofokleous 2017&lt/p&gt<br>
-					&lt\footer&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltfooter&gt<br>
+						&nbsp&nbsp&ltaddress&gt<br>
+						&nbsp&nbsp&nbsp&nbspBy &lta 
+						href="mailto:marios.sofokleous@yandex.com"
+						&gtMarios Sofokleous&lt/a&gt<br>
+						&nbsp&nbsp&lt/address&gt<br>
+						&nbsp&nbsp&ltp&gtCopyright Marios Sofokleous 2017&lt/p&gt<br>
+						&lt\footer&gt<br>
+					</p>
+				</div>
 			</section>
 			<section>
 				<h3>Aside</h3>
@@ -163,17 +178,21 @@
 					subscribe(i.e. Enter your email...) contents.
 				</p> 
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltdiv class="sidebar"&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/div&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltdiv class="sidebar"&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/div&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>
-					&ltaside&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/aside&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltaside&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/aside&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -194,19 +213,23 @@
 					Science, Video, Reviews, International Edition).
 				</p> 
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltul class="nav"&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/ul&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltul class="nav"&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/ul&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>
-					&ltnav&gt<br>
-					&nbsp&nbsp&ltul&gt<br>
-			 		&nbsp&nbsp&nbsp&nbsp...<br>
-			 		&nbsp&nbsp&lt/ul&gt<br>
-					&lt/nav&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltnav&gt<br>
+						&nbsp&nbsp&ltul&gt<br>
+				 		&nbsp&nbsp&nbsp&nbsp...<br>
+				 		&nbsp&nbsp&lt/ul&gt<br>
+						&lt/nav&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -228,17 +251,21 @@
 				<h4>Examples</h4>
 				<p>Blog post, news story, comment on a post, a review.</p>
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltdiv class="article"&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/div&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltdiv class="article"&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/div&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>
-					&ltarticle&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/article&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltarticle&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/article&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -256,17 +283,21 @@
 				</p>
 				<h4>Example</h4>
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltdiv class="main"&gt<br>
-					&nbsp&nbsp....<br>
-					&lt/div&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltdiv class="main"&gt<br>
+						&nbsp&nbsp....<br>
+						&lt/div&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>	
-					&ltmain&gt<br>
-					&nbsp&nbsp...<br>
-					&lt/main&gt<br>
-				</p>
+				<div class="code">
+					<p>	
+						&ltmain&gt<br>
+						&nbsp&nbsp...<br>
+						&lt/main&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -282,17 +313,21 @@
 				</p>
 				<h4>Example</h4>
 				<h5>HTML (Prior to HTML5)</h5>
-				<p>
-					&ltdiv class="image"&gt<br>
-					&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
-					&lt/div&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltdiv class="image"&gt<br>
+						&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
+						&lt/div&gt<br>
+					</p>
+				</div>
 				<h5>HTML5</h5>
-				<p>
-					&ltfigure&gt<br>
-					&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
-					&lt/figure&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltfigure&gt<br>
+						&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
+						&lt/figure&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -306,13 +341,15 @@
 				</p>
 				<h4>Example</h4> 
 				<h5>HTML5</h5>
-				<p>
-					&ltfigure&gt<br>
-					&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
-					&nbsp&nbsp&ltfigcaption&gtThis is a caption for the picture.
-					&lt/figcaption&gt<br>
-					&lt/figure&gt<br>
-				</p>
+				<div class="code">
+					<p>
+						&ltfigure&gt<br>
+						&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
+						&nbsp&nbsp&ltfigcaption&gtThis is a caption for the picture.
+						&lt/figcaption&gt<br>
+						&lt/figure&gt<br>
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
@@ -326,13 +363,15 @@
 				</p>
 				<h4>Example</h4> 
 				<h5>HTML5</h5>
-				<p>&lttime&gt2013-09-16&lt/time&gt</p>
-				<p>
-					We can use the "datetime" attribute to get our desired format:<br>
-					&lttime datetime="2013-09-16"&gt16/09/13&lt/time&gt<br>
-					&lttime datetime="2013-09-16"&gtSeptember 16, 2013&lt/time&gt<br>
-					...
-				</p>
+				<div class="code">
+					<p>&lttime&gt2013-09-16&lt/time&gt</p>
+					<p>
+						We can use the "datetime" attribute to get our desired format:<br>
+						&lttime datetime="2013-09-16"&gt16/09/13&lt/time&gt<br>
+						&lttime datetime="2013-09-16"&gtSeptember 16, 2013&lt/time&gt<br>
+						...
+					</p>
+				</div>
 				<p>
 					The HTML5 implementation makes the document more 
 					<strong>semantic</strong>.
