--- a/updated-tags.html
+++ b/updated-tags.html
@@ -36,20 +36,23 @@
 					use the "class" attribute to make "i" more semantic.
 				</p>
 				<h4>Examples</h4>
-				<ul>
-					<li><i class="thought">I hope this works</i>, he thought.</li>
-					<li>
-						We ate different types of sushi last night such as 
-						<i class="sushi-type">Nigiri</i>, <i class="sushi-type">Sashimi</i> 
-						and <i class="sushi-type">Maki</i>.
-					</li>
-					<li>
-						There are four variations of the <i class="brevity code">Fox</i> 
-						brevity word, <i class="brevity word">Fox One</i> is one of them and
-						indicates a simulated or actual launch of a semi-active radar-guided
-						missile.
-					</li>
-				</ul>
+				<div class="code">
+					<ul>
+						<li><i class="thought">I hope this works</i>, he thought.</li>
+						<li>
+							We ate different types of sushi last night such as 
+							<i class="sushi-type">Nigiri</i>, 
+							<i class="sushi-type">Sashimi</i> and 
+							<i class="sushi-type">Maki</i>.
+						</li>
+						<li>
+							There are four variations of the <i class="brevity code">Fox</i> 
+							brevity word, <i class="brevity word">Fox One</i> is one of them 
+							and indicates a simulated or actual launch of a semi-active 
+							radar-guided missile.
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section>
 				<h3>"b" tag</h3>
@@ -66,12 +69,14 @@
 					tag.
 				</p>
 				<h4>Examples</h4>
-				<ul>
-					<li>
-						<b class="lead">The event takes place this upcoming Saturday, and 
-						over 3,000 people have already registered.</b>
-					</li>
-				</ul>
+				<div class="code">
+					<ul>
+						<li>
+							<b class="lead">The event takes place this upcoming Saturday, and 
+							over 3,000 people have already registered.</b>
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section>
 				<h3>"em" tag</h3>
@@ -81,21 +86,25 @@
 					pronunciation on a word.
 				</p>
 				<h4>Examples</h4>
-				<ul>
-					<li>Call a doctor <em>now!</em></li>
-					<li>I <em>love</em> swimming</li>
-				</ul>
+				<div class="code">
+					<ul>
+						<li>Call a doctor <em>now!</em></li>
+						<li>I <em>love</em> swimming</li>
+					</ul>
+				</div>
 			</section>
 			<section>
 				<h3>"strong" tag</h3>
 				<h4>Description</h4> 
 				<p>Strong importance.</p>
 				<h4>Examples</h4>
-				<ul>
-					<li>
-						<strong>Warning!</strong> This is <strong>very dangerous</strong>.
-					</li>
-				</ul>
+				<div class="code">
+					<ul>
+						<li>
+							<strong>Warning!</strong> This is <strong>very dangerous</strong>.
+						</li>
+					</ul>
+				</div>
 			</section>
 		</article>
 	</body>
