--- a/home.html
+++ b/home.html
@@ -24,16 +24,13 @@
 		</header>
 		<main role="main">
 
-
-
-
 		
 		</main>
 		<footer>
   		<address>
     		By <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
   		</address>
-  		<p>&copy Marios Sofokleous 2017</p>
+  		<p>&copy 2017 Marios Sofokleous</p>
 		</footer>
 	</body>
 </html>
