--- a/updated-elements.html
+++ b/updated-elements.html
@@ -60,5 +60,11 @@
 				</ul>
 			</section>
 		</article>
+		<footer>
+  		<address>
+    		By <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
+  		</address>
+  		<p>&copy 2017 Marios Sofokleous</p>
+		</footer>
 	</body>
 </html>
