--- a/updated-tags.html
+++ b/updated-tags.html
@@ -107,5 +107,11 @@
 				</div>
 			</section>
 		</article>
+		<footer>
+  		<address>
+    		By <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
+  		</address>
+  		<p>&copy 2017 Marios Sofokleous</p>
+		</footer>
 	</body>
 </html>
