--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -87,5 +87,11 @@
 				</p> 
 			</section>
 		</article>
+		<footer>
+  		<address>
+    		By <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
+  		</address>
+  		<p>&copy 2017 Marios Sofokleous</p>
+		</footer>
 	</body>
 </html>
