--- a/new-elements.html
+++ b/new-elements.html
@@ -7,6 +7,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+  	<link rel="stylesheet" href="main.css">
 		<title>New Elements</title>
 	</head>
 	<body>
