--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -16,22 +16,24 @@
 		<header>
 			<h1>HTML5 New Features</h1>
 			<nav>
-      	<li><a href="home.html">Home</a></li>
-        <li><a href="updated-tags.html">Updated Tags</a></li>
-    		<li><a href="updated-elements.html">Updated Elements</a></li>
-    		<li><a href="new-elements.html">New Elements</a></li>
-    		<li><a href="new-input-types.html">New Input Types</a></li>
-    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
-    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+      	<ul>
+	      	<li><a href="home.html">Home</a></li>
+	        <li><a href="updated-tags.html">Updated Tags</a></li>
+	    		<li><a href="updated-elements.html">Updated Elements</a></li>
+	    		<li><a href="new-elements.html">New Elements</a></li>
+	    		<li><a href="new-input-types.html">New Input Types</a></li>
+	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
+	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+	    	</ul>
 			</nav>
 		</header>
 		<article>
 			<header>
 				<h2>New Input Attributes</h2>
-				<p>Posted 28th February 2017</p>
+				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
 			</header>
 			<section>
-				<p>HTML5 added the following attributes for the &ltinput&gt element:</p>
+				<h4>HTML5 added the following attributes for the &ltinput&gt element:</h4>
 				<ul>
 					<li>autocomplete</li>
 					<li><b class="covered">autofocus</b></li>
@@ -52,7 +54,7 @@
 					<li><b class="covered">required</b></li>
 					<li>step</li>
 				</ul>
-				<p>HTML5 added the following attributes for the &ltform&gt element:</p>
+				<h4>HTML5 added the following attributes for the &ltform&gt element:</h4>
 				<ul>
 					<li>autocomplete</li>
 					<li>novalidate</li>
@@ -77,11 +79,13 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					<input type="text" name="first-name" placeholder="First name">
-					<input type="text" name="last-name" placeholder="Last name">
-					<input type="text" name="email" placeholder="email">
-				</form>
+				<div class="result">
+					<form>
+						<input type="text" name="first-name" placeholder="First name">
+						<input type="text" name="last-name" placeholder="Last name">
+						<input type="text" name="email" placeholder="email">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Autofocus</h3>
@@ -102,10 +106,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Username:<input type="text" name="username" autofocus>
-					Password:<input type="password" name="userpsw">
-				</form>
+				<div class="result">
+					<form>
+						Username:<input type="text" name="username" autofocus>
+						Password:<input type="password" name="userpsw">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Required</h3>
@@ -131,12 +137,14 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-		  		Username: <input type="text" name="username" required>
-		  		<input type="submit">
-		  		Password: <input type="password" name="userpsw" required>
-		  		<input type="submit">
-				</form>
+				<div class="result">
+					<form>
+			  		Username: <input type="text" name="username" required>
+			  		<input type="submit">
+			  		Password: <input type="password" name="userpsw" required>
+			  		<input type="submit">
+					</form>
+				</div>
 			</section>
 		</article>
 		<footer>
