--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -16,19 +16,21 @@
 		<header>
 			<h1>HTML5 New Features</h1>
 			<nav>
-      	<li><a href="home.html">Home</a></li>
-        <li><a href="updated-tags.html">Updated Tags</a></li>
-    		<li><a href="updated-elements.html">Updated Elements</a></li>
-    		<li><a href="new-elements.html">New Elements</a></li>
-    		<li><a href="new-input-types.html">New Input Types</a></li>
-    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
-    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+      	<ul>
+	      	<li><a href="home.html">Home</a></li>
+	        <li><a href="updated-tags.html">Updated Tags</a></li>
+	    		<li><a href="updated-elements.html">Updated Elements</a></li>
+	    		<li><a href="new-elements.html">New Elements</a></li>
+	    		<li><a href="new-input-types.html">New Input Types</a></li>
+	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
+	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+	    	</ul>
 			</nav>
 		</header>
 		<article>
 			<header>
 				<h2>New Form Elements</h2>
-				<p>Posted 28th February 2017</p>
+				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
 			</header>
 			<section>
 				<h3>Datalist</h3>
@@ -61,17 +63,19 @@
 					&ltdatalist&gt options.
 				</p>
 				<h5>Result</h5>
-				<form>
-					Choose an OS:
-					<input list="operating systems">
-					<datalist id="operating systems">
-						<option value="Windows"></option>
-						<option value="macOS"></option>
-						<option value="Linux"></option>
-						<option value="Solaris"></option>
-						<option value="FreeBSD"></option>
-					</datalist>
-				</form>
+				<div class="result">
+					<form>
+						Choose an OS:
+						<input list="operating systems">
+						<datalist id="operating systems">
+							<option value="Windows"></option>
+							<option value="macOS"></option>
+							<option value="Linux"></option>
+							<option value="Solaris"></option>
+							<option value="FreeBSD"></option>
+						</datalist>
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Keygen</h3>
