--- a/new-input-types.html
+++ b/new-input-types.html
@@ -16,19 +16,21 @@
 		<header>
 			<h1>HTML5 New Features</h1>
 			<nav>
-      	<li><a href="home.html">Home</a></li>
-        <li><a href="updated-tags.html">Updated Tags</a></li>
-    		<li><a href="updated-elements.html">Updated Elements</a></li>
-    		<li><a href="new-elements.html">New Elements</a></li>
-    		<li><a href="new-input-types.html">New Input Types</a></li>
-    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
-    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+      	<ul>
+	      	<li><a href="home.html">Home</a></li>
+	        <li><a href="updated-tags.html">Updated Tags</a></li>
+	    		<li><a href="updated-elements.html">Updated Elements</a></li>
+	    		<li><a href="new-elements.html">New Elements</a></li>
+	    		<li><a href="new-input-types.html">New Input Types</a></li>
+	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
+	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+	    	</ul>
 			</nav>
 		</header>
 		<article>
 			<header>
 				<h2>New Input Types</h2>
-				<p>Posted 28th February 2017</p>
+			  <p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
 			</header>
 			<section>
 				<p>
@@ -58,10 +60,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Search Google:
-					<input type="search" name="google-search">
-				</form>
+				<div class="result">
+					<form>
+						Search Google:
+						<input type="search" name="google-search">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Email</h3>
@@ -80,11 +84,13 @@
 						&lt/form&gt<br>
 					</p>
 				</div>
-				<h5>Result</h5>		
-				<form>
-					E-mail:
-					<input type="email" name="email">
-				</form>
+				<h5>Result</h5>
+				<div class="result">		
+					<form>
+						E-mail:
+						<input type="email" name="email">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>URL</h3>
@@ -104,10 +110,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Add your homepage:
-					<input type="url" name="homepage">
-				</form>
+				<div class="result">
+					<form>
+						Add your homepage:
+						<input type="url" name="homepage">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Tel</h3>
@@ -127,10 +135,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Telephone:
-					<input type="tel" name="usrtel">
-				</form>
+				<div class="result">
+					<form>
+						Telephone:
+						<input type="tel" name="usrtel">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Number</h3>
@@ -154,10 +164,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Enter a number (between 1 and 5):
-					<input type="number" name="number" min="1" max="5">
-				</form>
+				<div class="result">
+					<form>
+						Enter a number (between 1 and 5):
+						<input type="number" name="number" min="1" max="5">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Range</h3>
@@ -180,10 +192,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Range (0-50):
-					<input type="range" name="points" min="0" max="50">
-				</form>
+				<div class="result">
+					<form>
+						Range (0-50):
+						<input type="range" name="points" min="0" max="50">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Month</h3>
@@ -203,10 +217,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Select a month:
-					<input type="month" name="month-year">
-				</form>
+				<div class="result">
+					<form>
+						Select a month:
+						<input type="month" name="month-year">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Week</h3>
@@ -226,10 +242,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Select a week:
-					<input type="week" name="week-year">
-				</form>
+				<div class="result">
+					<form>
+						Select a week:
+						<input type="week" name="week-year">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Date</h3>
@@ -249,10 +267,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Birthday:
-					<input type="date" name="birthday">
-				</form>
+				<div class="result">
+					<form>
+						Birthday:
+						<input type="date" name="birthday">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Datetime-local</h3>
@@ -273,10 +293,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Exam (date and time):
-					<input type="datetime-local" name="exam-time">
-				</form>
+				<div class="result">
+					<form>
+						Exam (date and time):
+						<input type="datetime-local" name="exam-time">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Datetime</h3>
@@ -296,10 +318,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Exam (date and time):
-					<input type="datetime" name="exam-time">
-				</form>
+				<div class="result">
+					<form>
+						Exam (date and time):
+						<input type="datetime" name="exam-time">
+					</form>
+				</div>
 				<p>
 					<i class="notice">Notice:</i> As of Feb 23, 2017, "datetime" is not 
 					supported.
@@ -323,10 +347,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Select a time:
-					<input type="time" name="usrtime">
-				</form>
+				<div class="result">
+					<form>
+						Select a time:
+						<input type="time" name="usrtime">
+					</form>
+				</div>
 			</section>
 			<section>
 				<h3>Color</h3>
@@ -346,10 +372,12 @@
 					</p>
 				</div>
 				<h5>Result</h5>
-				<form>
-					Pick a color:
-					<input type="color" name="usrcolor">
-				</form>
+				<div class="result">
+					<form>
+						Pick a color:
+						<input type="color" name="usrcolor">
+					</form>
+				</div>
 			</section>
 		</article>
 		<footer>
