--- a/updated-elements.html
+++ b/updated-elements.html
@@ -16,22 +16,24 @@
 		<header>
 			<h1>HTML5 New Features</h1>
 			<nav>
-      	<li><a href="home.html">Home</a></li>
-        <li><a href="updated-tags.html">Updated Tags</a></li>
-    		<li><a href="updated-elements.html">Updated Elements</a></li>
-    		<li><a href="new-elements.html">New Elements</a></li>
-    		<li><a href="new-input-types.html">New Input Types</a></li>
-    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
-    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+      	<ul>
+	      	<li><a href="home.html">Home</a></li>
+	        <li><a href="updated-tags.html">Updated Tags</a></li>
+	    		<li><a href="updated-elements.html">Updated Elements</a></li>
+	    		<li><a href="new-elements.html">New Elements</a></li>
+	    		<li><a href="new-input-types.html">New Input Types</a></li>
+	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
+	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+	    	</ul>
 			</nav>
 		</header>
 		<article>
 			<header>
 				<h2>Updated Elements</h2>
-				<p>Posted 28th February 2017</p>
+				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
 			</header>
 			<section>
-				<h3>Example:</h3>
+				<h4>Example:</h4>
 				<div class="code">
 					<p>
 						&lt!DOCTYPE html&gt (1)<br>
@@ -49,7 +51,7 @@
 						&lt/html&gt
 					</p>
 				</div>
-				<h3>Description:</h3>
+				<h4>Description:</h4>
 				<ul>
 					<li>
 						DOCTYPE (1): set the HTML version that the browser should use. If 
