--- a/updated-tags.html
+++ b/updated-tags.html
@@ -16,19 +16,21 @@
 		<header>
 			<h1>HTML5 New Features</h1>
 			<nav>
-      	<li><a href="home.html">Home</a></li>
-        <li><a href="updated-tags.html">Updated Tags</a></li>
-    		<li><a href="updated-elements.html">Updated Elements</a></li>
-    		<li><a href="new-elements.html">New Elements</a></li>
-    		<li><a href="new-input-types.html">New Input Types</a></li>
-    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
-    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+      	<ul>
+	      	<li><a href="home.html">Home</a></li>
+	        <li><a href="updated-tags.html">Updated Tags</a></li>
+	    		<li><a href="updated-elements.html">Updated Elements</a></li>
+	    		<li><a href="new-elements.html">New Elements</a></li>
+	    		<li><a href="new-input-types.html">New Input Types</a></li>
+	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
+	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+	    	</ul>
 			</nav>
 		</header>
 		<article>
 			<header>
 				<h2>Updated Tags</h2>
-				<p>Posted 28th February 2017</p>
+				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
 			</header>
 			<section>
 				<h3>"i" tag</h3>
@@ -112,7 +114,7 @@
 		</article>
 		<footer>
   		<address>
-    		By <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
+    		By <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
   		</address>
   		<p>&copy 2017 Marios Sofokleous</p>
 		</footer>
