Add HTML logo and style <a> tags

--- a/home.html
+++ b/home.html
@@ -33,9 +33,8 @@
 		</main>
 		<footer>
   		<address>
-    		By <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
+    		&copy 2017 <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
   		</address>
-  		<p>&copy 2017 Marios Sofokleous</p>
 		</footer>
 	</body>
 </html>
