--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -30,6 +30,7 @@
 		<article>
 			<header>
 				<h2>New Form Elements</h2>
+				<img src="HTML5.png" alt="HTML5 logo" width="50px">
 				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
 			</header>
 			<section>
@@ -96,9 +97,8 @@
 		</article>
 		<footer>
   		<address>
-    		By <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
+    		&copy 2017 <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
   		</address>
-  		<p>&copy 2017 Marios Sofokleous</p>
 		</footer>
 	</body>
 </html>
